--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,8 @@
-if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_UNIT_TESTS)
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_MAIN_NAME AND BUILD_TESTS)
 	if (BUILD_UNIT_TESTS)
-		add_subdirectory(Unit)
+		add_subdirectory(Lib/Unit)
 	endif()
 	if (BUILD_INTEGRATION_TESTS)
-		add_subdirectory(Integration)
+		add_subdirectory(Lib/Integration)
 	endif()
 endif()
