--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "scripts"]
 	path = scripts
 	url = https://github.com/ComaszTyrulik/BasicCppSetupScripts
-[submodule "vendor/XxHash/xxHash"]
-	path = vendor/XxHash/xxHash
-	url = https://github.com/ComaszTyrulik/xxHash
+[submodule "vendor/ComaszTyrulik/CommonUtilities"]
+	path = vendor/ComaszTyrulik/CommonUtilities
+	url = https://github.com/ComaszTyrulik/CommonUtilities.git
